new updated features for bulk add to remove friction from workflow. and a few cosmetic fixes here and there.
